사용자 이름 ???으로 표현

--- a/app/src/main/res/layout/activity_user.xml
+++ b/app/src/main/res/layout/activity_user.xml
@@ -9,6 +9,7 @@
         tools:context=".UserActivity">
 
         <TextView
+            android:id="@+id/userNameTxt"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:gravity="center"
