요구사항 변경 - 이름 + 생년 입력받아서 => 이름(?세)로 출력

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,6 +13,12 @@
             android:layout_height="wrap_content"
             android:singleLine="true"
             android:hint="이름을 입력하세요"/>
+        <EditText
+            android:id="@+id/birthYear"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:inputType="number"
+            android:hint="생년을 입력하세요. (Ex. 1994)"/>
 
         <Button
             android:id="@+id/okBtn"
