--- a/app/src/main/res/layout/activity_user.xml
+++ b/app/src/main/res/layout/activity_user.xml
@@ -9,11 +9,11 @@
         tools:context=".UserActivity">
 
         <TextView
-            android:id="@+id/userNameTxt"
+            android:id="@+id/userInfoTxt"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:gravity="center"
-            android:text="입력한 사용자 이름"
+            android:text="김하늬"
             android:textSize="25sp"/>
 
     </LinearLayout>
