--- a/app/src/main/res/layout/activity_user.xml
+++ b/app/src/main/res/layout/activity_user.xml
@@ -13,7 +13,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:gravity="center"
-            android:text="김하늬"
+            android:text="김하늬(27세)"
             android:textSize="25sp"/>
 
     </LinearLayout>
